# clavis

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: CI.yml
crates/clavis/: Cargo.toml
crates/clavis/benches/: encrypted_stream.rs  key_exchange.rs  packet_roundtrip.rs  packets.rs
crates/clavis/src/: crypto.rs  error.rs  lib.rs  packet.rs  stream.rs  tests.rs  utils.rs
examples/client/: Cargo.toml
examples/client/src/: main.rs
examples/packets/: Cargo.toml
examples/packets/src/: lib.rs
examples/server/: Cargo.toml
examples/server/src/: main.rs
