[package]
name = "clavis"
version = "0.1.1-rc3"
edition = "2021"
description = "A Rust library for secure, encrypted communication over asynchronous streams"
authors = ["Pyro"]
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/pyrohost/clavis"
keywords = ["encryption", "communication", "async", "security"]
categories = ["cryptography", "asynchronous", "network-programming"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
rand = "0.8"
thiserror = "1.0"
sha2 = "0.10.8"
hkdf = "0.12.4"
bincode = "1.3.3"
tracing = "0.1.40"
chacha20poly1305 = "0.10.1"

[dev-dependencies]
criterion2 = { git = "https://github.com/Boshen/criterion2.rs", features = [
    "async_tokio",
] }
futures = "0.3.31"

[[bench]]
name = "key_exchange"
harness = false

[[bench]]
name = "packet_roundtrip"
harness = false

[badges]
maintenance = { status = "actively-developed" }
