[package]
name = "clavis"
version = "0.1.1-rc6"
edition = "2021"
authors = ["Pyro Host Inc. <team@pyro.host>"]
description = "A robust, asynchronous Rust library for establishing secure, encrypted communication channels over network streams"
repository = "https://github.com/pyrohost/clavis"
license = "MIT"
keywords = ["crypto", "network", "async", "encryption", "security"]
categories = ["cryptography", "network-programming", "asynchronous"]
readme = "../../README.md"

[dependencies]
# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Cryptography
chacha20poly1305 = { version = "0.10" }
x25519-dalek = { version = "2.0" }
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
hkdf = "0.12"
hmac = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bench]]
name = "encrypted_stream"
harness = false
