[package]
name = "clavis"
version = "0.1.1-rc10"
edition = "2021"
authors = ["Pyro Host Inc. <team@pyro.host>"]
description = "High-performance async network encryption library featuring XChaCha20-Poly1305, type-safe protocol DSL, and zero-copy packet streaming for secure communication channels"
repository = "https://github.com/pyrohost/clavis"
license = "MIT"
keywords = ["encryption", "networking", "async-stream", "xchacha20", "protocol"]
categories = [
    "cryptography",
    "network-programming",
    "asynchronous",
    "encoding",
    "parsing",
]
readme = "../../README.md"

[dependencies]
tokio = "1.42"

# Cryptography
chacha20poly1305 = { version = "0.10" }
x25519-dalek = { version = "2.0" }
rand = { version = "0.8", features = ["std", "getrandom"] }
sha2 = "0.10"
hkdf = "0.12"
hmac = "0.12"
subtle = "2.6.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = { version = "0.1", features = ["attributes"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "encrypted_stream"
harness = false
